deploy: 7f01eb3c3a8acc4100d4f356a67eff4196d04ae7

--- a/index.html
+++ b/index.html
@@ -148,9 +148,11 @@ unique name and publish it along with the device description.</p>
 <li>provide hints for a UI, without specifying the UI implementation</li>
 </ul>
 <h2 id="profile-structure">Profile structure</h2>
-<p>Profiles are defined on 2 levels;
-1. Device level: this maps to the Homie device, and it defines the capabilities for the device
-2. Capability level: this maps to a Homie "node" within a device, and it defines the properties for the capability/node.</p>
+<p>Profiles are defined on 2 levels;</p>
+<ol>
+<li>Device level: this maps to the Homie device, and it defines the capabilities for the device</li>
+<li>Capability level: this maps to a Homie "node" within a device, and it defines the properties for the capability/node.</li>
+</ol>
 <p>This structure allows for reuse of Capability profiles across different Device profiles</p>
 <h3 id="device-profiles">Device profiles</h3>
 <p>A device profile specifies the following:</p>
@@ -406,5 +408,5 @@ Another way could be a 'delta' property that simply receives +- values for adjus
 
 <!--
 MkDocs version : 1.6.0
-Build Date UTC : 2024-07-31 14:27:05.212560+00:00
+Build Date UTC : 2024-07-31 14:59:49.788306+00:00
 -->
